--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<h1>this is a header</h1>
 		<p>this is a paragraph</p>
 		<p>this is a second paragraph</p>
+		<p>this is a third paragraph</p>
 	</body>
 
 </html>
